fix: resolve CI failures (lint, security, ui type-check)
- Bump Go from 1.25.6 to 1.25.7 to fix GO-2026-4337 (crypto/tls vulnerability)
- Rename linters-settings to linters.settings for golangci-lint v2 compatibility
- Fix UI type-check CI step to run tsc from web/ directory

Closes #7

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,4 +62,4 @@ jobs:
         run: npm ci --prefix web
 
       - name: Type-check
-        run: npx --prefix web tsc -b --noEmit
+        run: cd web && npx tsc -b --noEmit
